// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Participant should fail if cannot find the address remotely 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gaGCoQ"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 kOlxOw flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ibFMMD mx-3"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/></svg>"
                    title="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
                  />
                </div>
              </div>
            </div>
            <input
              aria-invalid="true"
              class="Input__InputStyled-wu99qs-0 hnWTtO overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-11 pl-14"
              data-testid="SelectRecipient__input"
              name="address"
              type="text"
              value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
            />
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <p
          class="text-sm text-theme-danger"
        >
          The address could not be found
        </p>
      </fieldset>
      <button
        class="Button-mdtvtf-0 khjEGA my-4 w-full"
        type="button"
      >
        Add Participant
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                role="row"
              >
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 lgFOpw"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-neutral"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button-mdtvtf-0 khjEGA"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="py-1"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should fail to find 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gaGCoQ"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 kOlxOw flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ibFMMD mx-3"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
            </div>
            <input
              aria-invalid="true"
              class="Input__InputStyled-wu99qs-0 hnWTtO overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-11 pl-14"
              data-testid="SelectRecipient__input"
              name="address"
              type="text"
              value="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
            />
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <p
          class="text-sm text-theme-danger"
        >
          The address could not be found
        </p>
      </fieldset>
      <button
        class="Button-mdtvtf-0 khjEGA my-4 w-full"
        type="button"
      >
        Add Participant
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                role="row"
              >
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 lgFOpw"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-neutral"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button-mdtvtf-0 khjEGA"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="py-1"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should fail with cold wallet 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gaGCoQ"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 kOlxOw flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ibFMMD mx-3"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/></svg>"
                    title="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                  />
                </div>
              </div>
            </div>
            <input
              aria-invalid="true"
              class="Input__InputStyled-wu99qs-0 hnWTtO overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-11 pl-14"
              data-testid="SelectRecipient__input"
              name="address"
              type="text"
              value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
            />
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <p
          class="text-sm text-theme-danger"
        >
          The public key could not be found
        </p>
      </fieldset>
      <button
        class="Button-mdtvtf-0 khjEGA my-4 w-full"
        type="button"
      >
        Add Participant
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                role="row"
              >
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 lgFOpw"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-neutral"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button-mdtvtf-0 khjEGA"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="py-1"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should render custom participants 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gaGCoQ"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 fNdAjs flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1"
            >
              <div
                class="Circle-uw7h4j-0 blBpcG mx-3 bg-theme-neutral-200 border-theme-neutral-300 dark:border-theme-neutral-800"
              />
            </div>
            <input
              class="Input__InputStyled-wu99qs-0 hnWTtO overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-11 pl-14"
              data-testid="SelectRecipient__input"
              name="address"
              type="text"
              value=""
            />
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="Button-mdtvtf-0 eVVyXU my-4 w-full"
        disabled=""
        type="button"
      >
        Add Participant
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                role="row"
              >
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 lgFOpw"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                        title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-neutral"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button-mdtvtf-0 khjEGA"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="py-1"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should work with a remote wallet 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gaGCoQ"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 fNdAjs flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ibFMMD mx-3"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
            </div>
            <input
              class="Input__InputStyled-wu99qs-0 hnWTtO overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-11 pl-14"
              data-testid="SelectRecipient__input"
              name="address"
              type="text"
              value="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
            />
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="Button-mdtvtf-0 eVVyXU my-4 w-full"
        disabled=""
        type="button"
      >
        Add Participant
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                role="row"
              >
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 lgFOpw"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-neutral"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button-mdtvtf-0 khjEGA"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="py-1"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 lgFOpw"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-neutral"
                  >
                    <span>
                      Participant #2
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button-mdtvtf-0 khjEGA"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="py-1"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should work with an imported wallet 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gaGCoQ"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 fNdAjs flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ibFMMD mx-3"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  />
                </div>
              </div>
            </div>
            <input
              class="Input__InputStyled-wu99qs-0 hnWTtO overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-11 pl-14"
              data-testid="SelectRecipient__input"
              name="address"
              type="text"
              value="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
            />
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="Button-mdtvtf-0 eVVyXU my-4 w-full"
        disabled=""
        type="button"
      >
        Add Participant
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-neutral-300 dark:border-theme-neutral-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                role="row"
              >
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 lgFOpw"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-neutral"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button-mdtvtf-0 khjEGA"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="py-1"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 lgFOpw"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                        title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-neutral"
                  >
                    <span>
                      Participant #2
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button-mdtvtf-0 khjEGA"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="py-1"
                    >
                      <div
                        class="sc-bdfBwQ fPrsah"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          trash.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
